--- a/BloodBank.Management.Web/Views/Shared/_Layout.cshtml
+++ b/BloodBank.Management.Web/Views/Shared/_Layout.cshtml
@@ -3,60 +3,66 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Jeevitha & Team</title>
     @Styles.Render("~/Content/css")
+    @*<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">*@
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
 <body>
     <div class="container">
+
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             @*@Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
-            <a href="/Home/Index" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
                 <img src="~/images/blood-donation.png" alt="Logo" width="32" height="32" class="rounded-circle">
                 <span class="fs-8">Blood Unity Center</span>
             </a>
 
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="/Home/Index" class="nav-link active" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="/Home/About" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="/Home/Contact" class="nav-link">Contact</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+                <li class="nav-item"><a href="/" class="nav-link" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="/BloodGroups" class="nav-link active" aria-current="page">Blood Group</a></li>
+                <li class="nav-item"><a href="/Donors" class="nav-link">Donor</a></li>
+                <li class="nav-item"><a href="/Recipients" class="nav-link">Recipients</a></li>
+                <li class="nav-item"><a href="/Donations" class="nav-link">Donation</a></li>
+                <li class="nav-item"><a href="/Inventories" class="nav-link">Inventory</a></li>
+                <li class="nav-item"><a href="/Hospitals" class="nav-link">Hospital</a></li>
             </ul>
             @Html.Partial("_LoginPartial")
         </header>
-        
+
     </div>
     @*<div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    </ul>
+                    @Html.Partial("_LoginPartial")
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
-        </div>
-    </div>*@
+        </div>*@
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+        @*<hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Jeevitha & Team</p>
+            </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @*@Scripts.Render("~/bundles/bootstrap")*@
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
