--- a/BloodBank.Management.Web/Views/BloodGroups/Index.cshtml
+++ b/BloodBank.Management.Web/Views/BloodGroups/Index.cshtml
@@ -4,12 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
@@ -17,7 +15,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Description)
         </th>
-        <th></th>
+        <th>Actions</th>
     </tr>
 
 @foreach (var item in Model) {
