--- a/BloodBank.Management.Web/Views/Recipients/Edit.cshtml
+++ b/BloodBank.Management.Web/Views/Recipients/Edit.cshtml
@@ -20,7 +20,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.BloodGroupId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BloodGroupId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.BloodGroupId, new SelectList(ViewBag.BloodGroups, "Id", "Name", Model?.BloodGroupId == null ? 0 : Model.BloodGroupId), new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.BloodGroupId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -28,7 +28,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.HospitalId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.HospitalId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.HospitalId, new SelectList(ViewBag.Hospitals, "Id", "Name", Model?.BloodGroupId == null ? 0 : Model.HospitalId), new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.HospitalId, "", new { @class = "text-danger" })
             </div>
         </div>
