--- a/BloodBank.Management.Web/Views/Inventories/Index.cshtml
+++ b/BloodBank.Management.Web/Views/Inventories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BloodBank.Management.Models.Entity.Inventory>
+﻿@model IEnumerable<BloodBank.Management.Models.ViewModel.InventoryList>
 
 @{
     ViewBag.Title = "Index";
@@ -12,10 +12,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.DonorId)
+            @Html.DisplayNameFor(model => model.Donor)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.BloodGroupId)
+            @Html.DisplayNameFor(model => model.BloodGroup)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.ExpiryDate)
@@ -29,16 +29,24 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.DonorId)
+            @Html.DisplayFor(modelItem => item.Donor)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.BloodGroupId)
+            @Html.DisplayFor(modelItem => item.BloodGroup)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ExpiryDate)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Status)
+            @*@Html.DisplayFor(modelItem => item.Status)*@
+            @if (item.Status)
+            {
+                <span class="badge badge-danger" style="background-color:black;">Not Available</span>
+            }
+            else
+            {
+                <span class="badge  badge-success" style="background-color:black;">Available</span>
+            }
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
