Login  & Register  & Layout UI Design

--- a/BloodBank.Management.Web/Views/Shared/_LoginPartial.cshtml
+++ b/BloodBank.Management.Web/Views/Shared/_LoginPartial.cshtml
@@ -5,27 +5,64 @@
     {
         @Html.AntiForgeryToken()
 
-        <ul class="nav nav-pills">
-            <li class="nav-item"><a href="/" class="nav-link" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="/BloodGroups" class="nav-link active" aria-current="page">Blood Group</a></li>
-            <li class="nav-item"><a href="/Donors" class="nav-link">Donor</a></li>
-            <li class="nav-item"><a href="/Recipients" class="nav-link">Recipients</a></li>
-            <li class="nav-item"><a href="/Donations" class="nav-link">Donation</a></li>
-            <li class="nav-item"><a href="/Inventories" class="nav-link">Inventory</a></li>
-            <li class="nav-item"><a href="/Hospitals" class="nav-link">Hospital</a></li>
-            <li class="nav-item">
-                @Html.ActionLink("Hello " + User.Identity.GetUserName().Split('@')[0] + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
-            </li>
-            <li class="nav-item"><a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link">Log off</a></li>
+        <div id="wrapper">
 
-        </ul>
+            <aside id="sidebar-wrapper">
+                <div class="sidebar-brand">
+                    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+                        <img src="~/images/blood-donation.png" alt="Logo" width="32" height="32" class="rounded-circle">
+                        <span class="fs-8">Blood Unity</span>
+                    </a>
+                </div>
+                <ul class="sidebar-nav">
+                    <li class="nav-item"><a href="/" class="nav-link" aria-current="page">Home</a></li>
+                    <li class="nav-item"><a href="/BloodGroups" class="nav-link active" aria-current="page">Blood Group</a></li>
+                    <li class="nav-item active"><a href="/Donors" class="nav-link">Donor</a></li>
+                    <li class="nav-item"><a href="/Recipients" class="nav-link">Recipients</a></li>
+                    <li class="nav-item"><a href="/Donations" class="nav-link">Donation</a></li>
+                    <li class="nav-item"><a href="/Inventories" class="nav-link">Inventory</a></li>
+                    <li class="nav-item"><a href="/Hospitals" class="nav-link">Hospital</a></li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Hello " + User.Identity.GetUserName().Split('@')[0] + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
+                    </li>
+                    <li class="nav-item"><a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link">Log off</a></li>
+
+                </ul>
+            </aside>
+
+            @*<div id="navbar-wrapper">
+                <nav class="navbar navbar-inverse">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <a href="#" class="navbar-brand" id="sidebar-toggle"><i class="fa fa-bars"></i></a>
+                        </div>
+                    </div>
+                </nav>
+            </div>*@
+
+        </div>
+
+        @*<ul class="nav nav-pills">
+                <li class="nav-item"><a href="/" class="nav-link" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="/BloodGroups" class="nav-link active" aria-current="page">Blood Group</a></li>
+                <li class="nav-item"><a href="/Donors" class="nav-link">Donor</a></li>
+                <li class="nav-item"><a href="/Recipients" class="nav-link">Recipients</a></li>
+                <li class="nav-item"><a href="/Donations" class="nav-link">Donation</a></li>
+                <li class="nav-item"><a href="/Inventories" class="nav-link">Inventory</a></li>
+                <li class="nav-item"><a href="/Hospitals" class="nav-link">Hospital</a></li>
+                <li class="nav-item">
+                    @Html.ActionLink("Hello " + User.Identity.GetUserName().Split('@')[0] + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
+                </li>
+                <li class="nav-item"><a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link">Log off</a></li>
+
+            </ul>*@
 
     }
 }
 else
 {
-    <ul class="nav nav-pills">
-        <li class="nav-item">@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "nav-link" })</li>
-        <li class="nav-item">@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "nav-link" })</li>
-    </ul>
+    @*<ul class="nav nav-pills">
+            <li class="nav-item">@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "nav-link" })</li>
+            <li class="nav-item">@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "nav-link" })</li>
+        </ul>*@
 }
