--- a/BloodBank.Management.Web/Content/Site.css
+++ b/BloodBank.Management.Web/Content/Site.css
@@ -1,6 +1,6 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    background: whitesmoke!important;
+    font-size:13px;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -17,8 +17,293 @@
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
-input,
+/*input,
 select,
 textarea {
     max-width: 280px;
+}*/
+
+.login-container{
+    height:100vh;
 }
+.login-img-bg {
+    background: #fff;
+}
+.login-img{
+    margin-top:130px;
+    border-radius:0px;
+}
+.login-card {
+    background-color: #fff;
+    padding: 30px;
+    margin: 14% 13% 0% 13%;
+    border-radius: 10px;
+}
+.app-logo{
+    font-size:25px;
+}
+.login-btn {
+    background: #dc3545;
+    width: 100%;
+    color: #fff;
+    padding: 8px;
+    font-size: 15px;
+    font-weight: 500;
+    border: 2px solid #dc3545;
+}
+    .login-btn:hover {
+        background: #ffffff;
+        color: #dc3545;
+        padding: 8px;
+        border: 2px solid #dc3545;
+        box-shadow: 2px 4px 6px #f2c2c2;
+    }
+.text-right{
+    text-align:right
+}
+.create-account-text a {
+    text-decoration: none;
+    color: #000;
+    font-weight: 600;
+}
+/*.app-navigation{
+    background: #fff;
+    box-shadow: 0px 2px 0px 0px #8080802e;
+}
+.app-navigation  header{
+    padding: 13px 10px 13px 10px !important;
+}
+.nav-link {
+    font-size: 14px !important;
+    color: #616161;
+    font-weight: 500;
+}
+*/
+
+.app-content{
+    padding: 20px 20px 20px 230px;
+}
+.blood-unity-box-card {
+    background-color: #fff;
+    box-shadow: 5px 1px 5px #80808024;
+}
+.blood-unity-box-card-header {
+    background: #f7baba30;
+    padding: 10px;
+    border-left: 3px solid #ea868f;
+}
+.blood-unity-box-card-header  a {
+    color: #000;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 700;
+}
+.blood-unity-box-card-header-icon {
+    width: 26px;
+    float: left;
+    padding-top: 2px;
+}
+.blood-unity-box-card-content {
+    padding: 15px;
+}
+.root-description {
+    padding-bottom: 10px;
+    color: #000;
+    font-weight: 500;
+}
+    .root-description span {
+        margin-right: 2px;
+        margin-left: 2px;
+    }
+
+
+
+
+    /* ============================== aside menu code start Here ========================  */
+    a {
+    transition: background 0.2s, color 0.2s;
+}
+
+a:hover,
+a:focus {
+    text-decoration: none;
+}
+
+#wrapper {
+    padding-left: 0;
+    transition: all 0.5s ease;
+    position: relative;
+}
+
+#sidebar-wrapper {
+    z-index: 1000;
+    position: fixed;
+    left: 250px;
+    width: 0;
+    height: 100%;
+    margin-left: -250px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background: #fff;
+    transition: all 0.5s ease;
+    box-shadow: 4px 0px 3px #8080802e;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    width: 210px;
+}
+
+.sidebar-brand {
+    position: absolute;
+    top: 0;
+    width: 210px;
+    text-align: center;
+    padding: 20px 15px 0px 15px;
+}
+
+    .sidebar-brand h2 {
+        margin: 0;
+        font-weight: 600;
+        font-size: 24px;
+        color: #fff;
+    }
+
+.sidebar-nav {
+    position: absolute;
+    top: 75px;
+    width: 210px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    border-top: 1px solid #d3d3d3;
+}
+
+    .sidebar-nav > li {
+        text-indent: 10px;
+        line-height: 42px;
+    }
+
+        .sidebar-nav > li a {
+            display: block;
+            text-decoration: none;
+            color: #7e7e7e;
+            font-weight: 600;
+            font-size: 13px;
+        }
+
+        .sidebar-nav > li > a:hover,
+        .sidebar-nav > li.active > a {
+            text-decoration: none;
+            color: #fff;
+            background: #dc3545;
+        }
+
+        .sidebar-nav > li > a i.fa {
+            font-size: 24px;
+            width: 60px;
+        }
+
+#navbar-wrapper {
+    width: 100%;
+    position: absolute;
+    z-index: 2;
+}
+
+#wrapper.toggled #navbar-wrapper {
+    position: absolute;
+    margin-right: -250px;
+}
+
+#navbar-wrapper .navbar {
+    border-width: 0 0 0 0;
+    background-color: #eee;
+    font-size: 24px;
+    margin-bottom: 0;
+    border-radius: 0;
+}
+
+    #navbar-wrapper .navbar a {
+        color: #757575;
+    }
+
+        #navbar-wrapper .navbar a:hover {
+            color: #F8BE12;
+        }
+
+#content-wrapper {
+    width: 100%;
+    position: absolute;
+    padding: 15px;
+    top: 100px;
+}
+
+.sidebar-nav > li > a:hover {
+    text-decoration: none;
+    color: #dc3545;
+    background: #cbcbcb;
+}
+@media (min-width: 992px) {
+    #wrapper {
+        padding-left: 210px;
+    }
+
+
+    #sidebar-wrapper {
+        width: 210px;
+    }
+
+
+    #navbar-wrapper {
+        position: relative;
+    }
+
+    #content-wrapper {
+        position: relative;
+        top: 0;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    #wrapper {
+        padding-left: 60px;
+    }
+
+    #sidebar-wrapper {
+        width: 60px;
+    }
+
+    #navbar-wrapper {
+        position: relative;
+    }
+
+    #content-wrapper {
+        position: relative;
+        top: 0;
+    }
+
+}
+
+@media (max-width: 767px) {
+    #wrapper {
+        padding-left: 0;
+    }
+
+    #sidebar-wrapper {
+        width: 0;
+    }
+
+    #navbar-wrapper {
+        position: relative;
+    }
+
+    #wrapper.toggled {
+        padding-left: 210px;
+    }
+
+    #content-wrapper {
+        position: relative;
+        top: 0;
+    }
+}
+
+/* ============================== aside menu code End Here ========================  */
