--- a/BloodBank.Management.Web/Views/Account/Login.cshtml
+++ b/BloodBank.Management.Web/Views/Account/Login.cshtml
@@ -4,59 +4,70 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                    </div>
+
+<div class="container-fluid">
+
+    <div class="row login-container">
+        <div class="col-md-6 col-sm-6 login-img-bg">
+            <img src="~/images/login/login1.jpg" class="img-fluid login-img" />
+        </div>
+        <div class="col-md-6 col-sm-6">
+            <div class="login-card">
+                <div class="text-center">
+                    <a href="/" class="text-dark text-decoration-none app-logo">
+                        <img src="~/images/blood-donation.png" alt="Logo" width="32" height="32" class="rounded-circle">
+                        <span class="fs-8"><b>Blood Unity</b></span>
+                    </a>
                 </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
+                <h4 class="mb-4">@ViewBag.Title</h4>
+                <section id="loginForm">
+                    @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group mb-2">
+                            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label mb-2" })
+                            <div class="col-md-12">
+                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control col-md-12 col-sm-12" })
+                                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
-                    </div>
-                </div>
+                        <div class="form-group mb-2">
+                            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label mb-2" })
+                            <div class="col-md-12">
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control col-md-12 col-sm-12" })
+                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="form-group mt-3 mb-3">
+                            <div class="col-md-offset-2 col-md-10">
+                                <div class="checkbox">
+                                    @Html.CheckBoxFor(m => m.RememberMe)
+                                    @Html.LabelFor(m => m.RememberMe)
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group mb-3">
+                            <div class="col-md-12">
+                                <input type="submit" value="Log In" class="btn btn-default login-btn" />
+                            </div>
+                        </div>
+                        <p class="text-right">
+                            don't have account <span class="create-account-text"> @Html.ActionLink("Create Account", "Register")</span>
+                        </p>
+                        @* Enable this once you have account confirmation enabled for password reset functionality
                 <p>
-                    @Html.ActionLink("Register as a new user", "Register")
-                </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
-            }
-        </section>
-    </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
+                    @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                </p>*@
+                    }
+                </section>
+            </div>
+            
+        </div>
+
     </div>
 </div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
