--- a/BloodBank.Management.Web/Views/Account/Register.cshtml
+++ b/BloodBank.Management.Web/Views/Account/Register.cshtml
@@ -3,38 +3,63 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+
+<div class="container-fluid">
+
+    <div class="row login-container">
+        <div class="col-md-6 col-sm-6 login-img-bg">
+            <img src="~/images/login/login1.jpg" class="img-fluid login-img" />
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+        <div class="col-md-6 col-sm-6">
+            <div class="login-card">
+                <div class="text-center">
+                    <a href="/" class="text-dark text-decoration-none app-logo">
+                        <img src="~/images/blood-donation.png" alt="Logo" width="32" height="32" class="rounded-circle">
+                        <span class="fs-8"><b>Blood Unity</b></span>
+                    </a>
+                </div>
+                <h4 class="mb-4">@ViewBag.Title</h4>
+                <h6>Create a new account</h6>
+                <section id="loginForm">
+                    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group mb-3">
+                            @Html.LabelFor(m => m.Email, new { @class = "col-md-10 control-label" })
+                            <div class="col-md-12">
+                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="form-group mb-3">
+                            @Html.LabelFor(m => m.Password, new { @class = "col-md-10 control-label" })
+                            <div class="col-md-12">
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="form-group mb-3">
+                            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-10 control-label" })
+                            <div class="col-md-12">
+                                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                            </div>
+                        </div>
+
+                        <div class="form-group mt-3">
+                            <div class="col-md-12">
+                                <input type="submit" value="Register" class="btn btn-default login-btn" />
+                            </div>
+                        </div>
+
+                    }
+                </section>
+            </div>
+
         </div>
+
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
-        </div>
-    </div>
-}
+</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
