--- a/BloodBank.Management.Web/Views/Account/Login.cshtml
+++ b/BloodBank.Management.Web/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<div class="container-fluid">
+<div class="row">
 
     <div class="row login-container">
         <div class="col-md-6 col-sm-6 login-img-bg">
