--- a/BloodBank.Management.Web/Views/Account/Login.cshtml
+++ b/BloodBank.Management.Web/Views/Account/Login.cshtml
@@ -5,9 +5,9 @@
 }
 
 
-<div class="row">
+<div class="container-fluid">
 
-    <div class="row login-container">
+    <div class="row  login-container">
         <div class="col-md-6 col-sm-6 login-img-bg">
             <img src="~/images/login/login1.jpg" class="img-fluid login-img" />
         </div>
