--- a/BloodBank.Management.Web/Views/Shared/_Layout.cshtml
+++ b/BloodBank.Management.Web/Views/Shared/_Layout.cshtml
@@ -5,51 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Jeevitha & Team</title>
     @Styles.Render("~/Content/css")
-    @*<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">*@
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     @Scripts.Render("~/bundles/modernizr")
-
+    <link href="~/Content/Site.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="~/images/css/font-awesome.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="container">
-
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-            @*@Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                <img src="~/images/blood-donation.png" alt="Logo" width="32" height="32" class="rounded-circle">
-                <span class="fs-8">Blood Unity Center</span>
-            </a>
-
-            
+    @if (ViewBag.Title != "Log in" && ViewBag.Title != "Register")
+    {
+        <div class="container-fluid app-navigation">
             @Html.Partial("_LoginPartial")
-        </header>
+            @*<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+                    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+                        <img src="~/images/blood-donation.png" alt="Logo" width="32" height="32" class="rounded-circle">
+                        <span class="fs-8">Blood Unity</span>
+                    </a>
 
-    </div>
-    @*<div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    </ul>
+
                     @Html.Partial("_LoginPartial")
-                </div>
-            </div>
-        </div>*@
-    <div class="container body-content">
+                </header>*@
+
+        </div>
+
+    }
+
+
+    <div>
         @RenderBody()
-        @*<hr />
-            <footer>
-                <p>&copy; @DateTime.Now.Year - Jeevitha & Team</p>
-            </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
