--- a/BloodBank.Management.Web/Content/Site.css
+++ b/BloodBank.Management.Web/Content/Site.css
@@ -130,8 +130,34 @@ textarea {
         margin-right: 2px;
         margin-left: 2px;
     }
+.edit-icon-btn {
+    background: #faf1d5;
+    border: none;
+    border-radius: 22px;
+    width: 36px;
+    height: 36px;
+    line-height: 25px;
+    color: #ffc107;
+}
 
-
+.view-icon-btn {
+    background: #c9defd;
+    border: none;
+    border-radius: 22px;
+    width: 36px;
+    height: 36px;
+    line-height: 25px;
+    color: #0b59cb;
+}
+.delete-icon-btn {
+    background: #fedfdf;
+    border: none;
+    border-radius: 22px;
+    width: 36px;
+    height: 36px;
+    line-height: 25px;
+    color: #dc3545;
+}
 
 
 /* ============================== aside menu code start Here ========================  */
@@ -214,8 +240,8 @@ a {
         }
 
         .sidebar-nav > li > a i.fa {
-            font-size: 24px;
-            width: 60px;
+            font-size: 16px;
+            width: 30px;
         }
 
 #navbar-wrapper {
