--- a/BloodBank.Management.Web/Views/Shared/_LoginPartial.cshtml
+++ b/BloodBank.Management.Web/Views/Shared/_LoginPartial.cshtml
@@ -15,17 +15,18 @@
                     </a>
                 </div>
                 <ul class="sidebar-nav">
-                    <li class="nav-item"><a href="/" class="nav-link" aria-current="page">Home</a></li>
-                    <li class="nav-item"><a href="/BloodGroups" class="nav-link active" aria-current="page">Blood Group</a></li>
-                    <li class="nav-item active"><a href="/Donors" class="nav-link">Donor</a></li>
-                    <li class="nav-item"><a href="/Recipients" class="nav-link">Recipients</a></li>
-                    <li class="nav-item"><a href="/Donations" class="nav-link">Donation</a></li>
-                    <li class="nav-item"><a href="/Inventories" class="nav-link">Inventory</a></li>
-                    <li class="nav-item"><a href="/Hospitals" class="nav-link">Hospital</a></li>
+                    <li class="nav-item"><a href="/" class="nav-link" aria-current="page"><i class="fa fa-tachometer" aria-hidden="true"></i> Home</a></li>
+                    <li class="nav-item"><a href="/BloodGroups" class="nav-link active" aria-current="page"><i class="fa fa-tachometer" aria-hidden="true"></i> Blood Group</a></li>
+                    <li class="nav-item active"><a href="/Donors" class="nav-link"><i class="fa fa-users" aria-hidden="true"></i> Donor</a></li>
+                    <li class="nav-item"><a href="/Recipients" class="nav-link"><i class="fa fa-tachometer" aria-hidden="true"></i> Recipients</a></li>
+                    <li class="nav-item"><a href="/Donations" class="nav-link"><i class="fa fa-money" aria-hidden="true"></i> Donation</a></li>
+                    <li class="nav-item"><a href="/Inventories" class="nav-link"><i class="fa fa-tachometer" aria-hidden="true"></i> Inventory</a></li>
+                    <li class="nav-item"><a href="/Hospitals" class="nav-link"><i class="fa fa-hospital-o" aria-hidden="true"></i> Hospital</a></li>
+                    @*<li class="nav-item">
+                     @Html.ActionLink("Hello " + User.Identity.GetUserName().Split('@')[0] + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
+                    </li>*@
                     <li class="nav-item">
-                        @Html.ActionLink("Hello " + User.Identity.GetUserName().Split('@')[0] + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
-                    </li>
-                    <li class="nav-item"><a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link">Log off</a></li>
+                        <a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link"><i class="fa fa-tachometer" aria-hidden="true"></i> Log off</a></li>
 
                 </ul>
             </aside>
