--- a/BloodBank.Management.Web/Content/Site.css
+++ b/BloodBank.Management.Web/Content/Site.css
@@ -99,17 +99,18 @@ textarea {
 
 .blood-unity-box-card-header {
     background: #f7baba30;
-    padding: 10px;
+    padding: 7px 10px;
     border-left: 3px solid #ea868f;
 }
 
     .blood-unity-box-card-header a {
-        color: #000;
+        color: #dc3545;
         text-decoration: none;
-        font-size: 14px;
-        font-weight: 700;
+        font-size: 12px;
     }
-
+.blood-unity-box-card-title{
+    padding-top:2px;
+}
 .blood-unity-box-card-header-icon {
     width: 26px;
     float: left;
@@ -158,7 +159,14 @@ textarea {
     line-height: 25px;
     color: #dc3545;
 }
-
+.add-btn {
+    float: right;
+    border: none;
+    background: #ffc7c7;
+    border-radius: 12px;
+    padding: 3px 10px;
+    color: #dc3545;
+}
 
 /* ============================== aside menu code start Here ========================  */
 a {
