added top header

--- a/BloodBank.Management.Web/Views/Shared/_Layout.cshtml
+++ b/BloodBank.Management.Web/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 <body>
     @if (ViewBag.Title != "Log in" && ViewBag.Title != "Register")
     {
-        <div class="container-fluid app-navigation">
+        <div class="container-fluid app-navigation p-0">
             @Html.Partial("_LoginPartial")
             @*<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
                     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
