--- a/BloodBank.Management.Web/Content/Site.css
+++ b/BloodBank.Management.Web/Content/Site.css
@@ -167,7 +167,45 @@ textarea {
     padding: 3px 10px;
     color: #dc3545;
 }
+.app-top-header {
+    height: 50px;
+    background: #dc3545;
+}
+.logo-brand{
+    margin-left:15px;
+}
+    .logo-brand img {
+        background: #fff;
+        padding: 3px;
+        margin-top: 8px;
+    }
 
+.logo-brand-title {
+    color: #fff;
+    font-size: 14px;
+    font-weight: 800;
+    padding-left: 8px;
+    padding-top: 8px;
+}
+.user-icon {
+    margin-right: 9px;
+    margin-top: 9px;
+    background-color: #fc5858;
+    padding: 10px;
+    border-radius: 25px;
+    width: 32px;
+    height: 32px;
+    text-align: center;
+    color: #ffb2b2;
+    box-shadow: 0px 4px 10px #9c0000;
+    cursor:pointer;
+}
+.profile-dropdown {
+   font-size:12px;
+}
+.profile-dropdown i{
+ margin-right:5px;
+}
 /* ============================== aside menu code start Here ========================  */
 a {
     transition: background 0.2s, color 0.2s;
@@ -219,12 +257,10 @@ a {
 
 .sidebar-nav {
     position: absolute;
-    top: 75px;
     width: 210px;
     margin: 0;
     padding: 0;
     list-style: none;
-    border-top: 1px solid #d3d3d3;
 }
 
     .sidebar-nav > li {
