Donor Create Page

--- a/BloodBank.Management.Web/Content/Site.css
+++ b/BloodBank.Management.Web/Content/Site.css
@@ -74,11 +74,10 @@ textarea {
     color: #000;
     font-weight: 600;
 }
-/*.app-navigation{
-    background: #fff;
-    box-shadow: 0px 2px 0px 0px #8080802e;
+.app-navigation{
+padding-left:0px;
 }
-.app-navigation  header{
+/*.app-navigation  header{
     padding: 13px 10px 13px 10px !important;
 }
 .nav-link {
@@ -196,7 +195,7 @@ textarea {
     width: 32px;
     height: 32px;
     text-align: center;
-    color: #ffb2b2;
+    color: #fff;
     box-shadow: 0px 4px 10px #9c0000;
     cursor:pointer;
 }
@@ -205,6 +204,21 @@ textarea {
 }
 .profile-dropdown i{
  margin-right:5px;
+}
+.save-btn {
+    background-color: #f99b9b;
+    padding: 4px 15px;
+    font-size: 12px;
+    font-weight: 500;
+    color: #b30000;
+    border-radius: 15px;
+    box-shadow: 2px 3px 6px #dc3545;
+}
+.pr-5{
+    padding-right:5px;
+}
+label, .form-control{
+    font-size:12px;
 }
 /* ============================== aside menu code start Here ========================  */
 a {
