--- a/BloodBank.Management.Web/Views/Home/Index.cshtml
+++ b/BloodBank.Management.Web/Views/Home/Index.cshtml
@@ -2,23 +2,16 @@
     ViewBag.Title = "Dashboard";
 }
 
-<div class="row">
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+<div class="app-content">
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="blood-unity-box-card">Donors</div>
         </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+        <div class="col-sm-4">
+            <div class="blood-unity-box-card">Recipients</div>
+        </div>
+        <div class="col-sm-4">
+            <div class="blood-unity-box-card">Hospitals</div>
         </div>
     </div>
 </div>
