--- a/BloodBank.Management.Web/Views/Shared/_LoginPartial.cshtml
+++ b/BloodBank.Management.Web/Views/Shared/_LoginPartial.cshtml
@@ -22,6 +22,9 @@
                     <li><a class="dropdown-item" href="#"><i class="fa fa-user-o" aria-hidden="true"></i>Profile</a></li>
                     <li><a class="dropdown-item" href="#"><i class="fa fa-cog" aria-hidden="true"></i>Settings</a></li>
                     <li><a class="dropdown-item" href="#"><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a></li>
+                    <li>@*<a href="javascript:document.getElementById('logoutForm').submit()" class="dropdown-item"><i class="fa fa-sign-out" aria-hidden="true"></i> Log off</a>*@</li>
+                
+                    
                 </ul>
 
                 </div>
@@ -32,12 +35,12 @@
             <aside id="sidebar-wrapper">
 
                 <ul class="sidebar-nav">
-                    <li class="nav-item"><a href="/" class="nav-link" aria-current="page"><i class="fa fa-tachometer" aria-hidden="true"></i> Home</a></li>
-                    <li class="nav-item"><a href="/BloodGroups" class="nav-link active" aria-current="page"><i class="fa fa-tachometer" aria-hidden="true"></i> Blood Group</a></li>
+                    <li class="nav-item"><a href="/" class="nav-link" aria-current="page"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                    <li class="nav-item"><a href="/BloodGroups" class="nav-link active" aria-current="page"><i class="fa fa-tint" aria-hidden="true"></i> Blood Group</a></li>
                     <li class="nav-item active"><a href="/Donors" class="nav-link"><i class="fa fa-users" aria-hidden="true"></i> Donor</a></li>
-                    <li class="nav-item"><a href="/Recipients" class="nav-link"><i class="fa fa-tachometer" aria-hidden="true"></i> Recipients</a></li>
+                    <li class="nav-item"><a href="/Recipients" class="nav-link"><i class="fa fa-user-o" aria-hidden="true"></i> Recipients</a></li>
                     <li class="nav-item"><a href="/Donations" class="nav-link"><i class="fa fa-money" aria-hidden="true"></i> Donation</a></li>
-                    <li class="nav-item"><a href="/Inventories" class="nav-link"><i class="fa fa-tachometer" aria-hidden="true"></i> Inventory</a></li>
+                    <li class="nav-item"><a href="/Inventories" class="nav-link"><i class="fa fa-stack-exchange" aria-hidden="true"></i> Inventory</a></li>
                     <li class="nav-item"><a href="/Hospitals" class="nav-link"><i class="fa fa-hospital-o" aria-hidden="true"></i> Hospital</a></li>
                     @*<li class="nav-item">
                      @Html.ActionLink("Hello " + User.Identity.GetUserName().Split('@')[0] + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
