--- a/BloodBank.Management.Web/Views/Shared/_Layout.cshtml
+++ b/BloodBank.Management.Web/Views/Shared/_Layout.cshtml
@@ -16,15 +16,6 @@
     {
         <div class="container-fluid app-navigation">
             @Html.Partial("_LoginPartial")
-            @*<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-                    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                        <img src="~/images/blood-donation.png" alt="Logo" width="32" height="32" class="rounded-circle">
-                        <span class="fs-8">Blood Unity</span>
-                    </a>
-
-
-                    @Html.Partial("_LoginPartial")
-                </header>*@
 
         </div>
 
@@ -39,5 +30,13 @@
     @*@Scripts.Render("~/bundles/bootstrap")*@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     @RenderSection("scripts", required: false)
+
+    <script>
+        $(document).ready(function () {
+            var controllerName = '@ViewContext.Controller.ValueProvider.GetValue("controller").RawValue';
+            $("#wrapper ul.sidebar-nav li#" + controllerName + "-menu").addClass('active');
+        });
+
+    </script>
 </body>
 </html>
