--- a/BloodBank.Management.Web/Views/Inventories/Index.cshtml
+++ b/BloodBank.Management.Web/Views/Inventories/Index.cshtml
@@ -16,7 +16,7 @@
                 <div class="col-sm-6">
                     <div class="blood-unity-box-card-title">
                         <span class="blood-unity-box-card-header-icon">
-                            <i class="fa fa-user-plus blood-unity-box-card-header-icon" aria-hidden="true"></i>
+                            <i class="fa fa-table blood-unity-box-card-header-icon" aria-hidden="true"></i>
                         </span>
                         <b>Inventories</b>
                     </div>
@@ -76,13 +76,13 @@
                         </td>
                         <td>
 
-                            <a href="@Url.Action("Edit", "Edit")" class="btn btn-primary edit-icon-btn">
+                            <a href="@Url.Action("Edit", "Inventories", new {id = item.Id})" class="btn btn-primary edit-icon-btn">
                                 <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                             </a>
-                            <a href="@Url.Action("Details", "Details")" class="btn btn-primary view-icon-btn">
+                            <a href="@Url.Action("Details", "Inventories", new {id = item.Id})" class="btn btn-primary view-icon-btn">
                                 <i class="fa fa-eye" aria-hidden="true"></i>
                             </a>
-                            <a href="@Url.Action("Delete", "Delete")" class="btn btn-primary delete-icon-btn">
+                            <a href="@Url.Action("Delete", "Inventories", new {id = item.Id})" class="btn btn-primary delete-icon-btn">
                                 <i class="fa fa-trash" aria-hidden="true"></i>
                             </a>
 
